--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "getting-started",
+  "name": "libbing",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
-  "type": "module",
+  "main": "src/App.ts",
   "scripts": {
-    "start": "node app.js"
+    "start": "ts-node src/App.ts"
   },
   "author": "Shay DeWael",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^17.0.29",
     "discord-interactions": "^3.2.0",
+    "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "node-fetch": "^3.2.3"
+    "node-fetch": "^3.2.3",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
