--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/App.ts",
   "scripts": {
     "start": "ts-node src/App.ts",
-    "devStart": "nodemon src/App.ts",
+    "devStart": "nodemon src/App.ts"
   },
   "author": "Shay DeWael",
   "license": "MIT",
