--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,4 @@ APP_ID=<YOUR_APP_ID>
 GUILD_ID=<YOUR_GUILD_ID>
 DISCORD_TOKEN=<YOUR_BOT_TOKEN>
 PUBLIC_KEY=<YOUR_PUBLIC_KEY>
+SUPPORT_CHANNEL_ID=<YOUR_SUPPORT_CHANNEL_ID>
