--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ GUILD_ID=<YOUR_GUILD_ID>
 DISCORD_TOKEN=<YOUR_BOT_TOKEN>
 PUBLIC_KEY=<YOUR_PUBLIC_KEY>
 SUPPORT_CHANNEL_ID=<YOUR_SUPPORT_CHANNEL_ID>
+FORUMS_CHANNEL_ID=<YOUR_FORUMS_CHANNEL_ID>
